--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/vite-lib.umd.cjs",
-  "module": "./dist/vite-lib.js",
   "exports": {
     ".": {
-      "import": "./dist/vite-lib.js",
-      "require": "./dist/vite-lib.umd.cjs"
+      "import": "./dist/vite-lib.es.js",
+      "require": "./dist/vite-lib.umd.js"
     }
   },
+  "main": "./dist/vite-lib.umd.js",
+  "module": "./dist/vite-lib.es.js",
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
