--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-lib",
+  "name": "@nosto/vite-lib",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,12 +14,12 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/vite-lib.es.js",
-      "require": "./dist/vite-lib.umd.js"
+      "import": "./dist/vite-lib.js",
+      "require": "./dist/vite-lib.umd.jss"
     }
   },
-  "main": "./dist/vite-lib.umd.js",
-  "module": "./dist/vite-lib.es.js",
+  "main": "./dist/vite-lib.umd.cjs",
+  "module": "./dist/vite-lib.js",
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
