--- a/package.json
+++ b/package.json
@@ -1,33 +1,59 @@
 {
   "name": "@nosto/vite-lib",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "description": "Component library to simply implementing Nosto on React.",
+  "version": "0.1.7",
+  "author": "Mridang Agarwalla, Dominik Gilg",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nosto/nosto-react.git"
+  },
+  "keywords": [
+    "nosto",
+    "personalisation"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "vite build"
+    "prepare": "vite build",
+    "typecheck": "tsc",
+    "tslint": "tslint 'src/**/*.ts?(x)'",
+    "clean": "rimraf dist",
+    "prettier": "prettier '*/**/*.{ts,tsx,js,jsx,html,css,less}' --list-different",
+    "prettier:fix": "prettier '*/**/*.{ts,tsx,js,jsx,html,css,less}' --write"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
+  "dependencies": {
+    "snakeize": "^0.1.0",
+    "use-deep-compare-effect": "^1.3.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "@vitejs/plugin-react": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "vite": "^2.9.9",
+    "typescript": "^4.6.3",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2"
+  },
+  "main": "./dist/index.es.client.js",
+  "module": "./dist/index.es.client.js",
+  "types": "./src/types.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "import": "./dist/index.es.client.js",
+      "require": "./dist/index.umd.client.js"
     }
   },
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+  "bugs": {
+    "url": "https://github.com/Nosto/nosto-react/issues"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+  "homepage": "https://github.com/Nosto/nosto-react#readme"
 }
+ss
