--- a/package.json
+++ b/package.json
@@ -1,59 +1,47 @@
 {
-  "name": "@nosto/vite-lib",
-  "description": "Component library to simply implementing Nosto on React.",
-  "version": "0.1.7",
-  "author": "Mridang Agarwalla, Dominik Gilg",
-  "license": "ISC",
-  "type": "module",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Nosto/nosto-react.git"
-  },
-  "keywords": [
-    "nosto",
-    "personalisation"
-  ],
+  "name": "my-lib",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "yarn build",
-    "typecheck": "tsc",
-    "tslint": "tslint 'src/**/*.ts?(x)'",
-    "clean": "rimraf dist",
-    "prettier": "prettier '*/**/*.{ts,tsx,js,jsx,html,css,less}' --list-different",
-    "prettier:fix": "prettier '*/**/*.{ts,tsx,js,jsx,html,css,less}' --write"
+    "prepack": "json -f package.json -I -e \"delete this.devDependencies; delete this.dependencies\""
   },
-  "files": [
-    "dist",
-    "src"
-  ],
   "dependencies": {
-    "snakeize": "^0.1.0",
-    "use-deep-compare-effect": "^1.3.1",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "@vitejs/plugin-react": "^1.3.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "vite": "^2.9.9",
-    "typescript": "^4.6.3",
-    "prettier": "^2.0.5",
-    "rimraf": "^3.0.2"
+    "@babel/core": "^7.16.12",
+    "@types/node": "^17.0.12",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.21",
+    "@vitejs/plugin-react": "^1.1.4",
+    "acorn-jsx": "^5.3.2",
+    "babel-loader": "^8.2.3",
+    "json": "^11.0.0",
+    "typescript": "^4.5.5",
+    "vite": "^2.7.13",
+    "vite-plugin-dts": "^0.9.9"
   },
-  "main": "./dist/index.es.js",
-  "module": "./dist/index.es.js",
-  "types": "./src/types.ts",
+  "license": "UNLICENSED",
+  "peerDependencies": {
+    "react": "^16.8.0 || 17.x",
+    "react-dom": "^16.8.0 || 17.x",
+    "styled-components": "^5.0.0"
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/my-lib.umd.js",
+  "module": "./dist/my-lib.es.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "import": "./dist/my-lib.es.js",
+      "require": "./dist/my-lib.umd.js"
     }
-  },
-  "bugs": {
-    "url": "https://github.com/Nosto/nosto-react/issues"
-  },
-  "homepage": "https://github.com/Nosto/nosto-react#readme"
+  }
 }
