--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "my-lib",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepack": "json -f package.json -I -e \"delete this.devDependencies; delete this.dependencies\""
+    "prepack": "json -f package.json -I -e \"delete this.devDependencies; delete this.dependencies\" && vite build"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -33,7 +34,8 @@
     "styled-components": "^5.0.0"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "main": "./dist/my-lib.umd.js",
   "module": "./dist/my-lib.es.js",
